--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
 
   <body>
 
-  <ol>
+  <ol style="font-size: 66px;margin-left: 50px;">
 
     <li><a target="_blank" href="mason/index.html">mason</a>  </li>
 	<li><a target="_blank" href="short/index.html">short</a>  </li>
